lib/components/fabro-llm/tests/it/wire/snapshots/it__wire__openai_responses__stream_reasoning_summary_deltas.snap
---
source: lib/components/fabro-llm/tests/it/wire/openai_responses.rs
expression: rendered
---
[
  {
    "type": "stream_start"
  },
  {
    "type": "reasoning_start"
  },
  {
    "type": "reasoning_delta",
    "delta": "Let me "
  },
  {
    "type": "reasoning_delta",
    "delta": "think"
  },
  {
    "type": "text_start",
    "text_id": null
  },
  {
    "type": "text_delta",
    "delta": "4.",
    "text_id": null
  },
  {
    "type": "finish",
    "finish_reason": "stop",
    "usage": {
      "input_tokens": 15,
      "output_tokens": 4,
      "reasoning_tokens": 8,
      "cache_read_tokens": 0,
      "cache_write_tokens": 0
    },
    "response": {
      "id": "resp_stream",
      "model": "gpt-test",
      "provider": "openai",
      "message": {
        "role": "assistant",
        "content": [
          {
            "kind": "text",
            "data": "4."
          }
        ]
      },
      "finish_reason": "stop",
      "usage": {
        "input_tokens": 15,
        "output_tokens": 4,
        "reasoning_tokens": 8,
        "cache_read_tokens": 0,
        "cache_write_tokens": 0
      },
      "raw": {
        "id": "resp_stream",
        "model": "gpt-test",
        "status": "completed",
        "output": [],
        "usage": {
          "input_tokens": 15,
          "output_tokens": 12,
          "output_tokens_details": {
            "reasoning_tokens": 8
          }
        }
      },
      "warnings": [],
      "rate_limit": null
    }
  }
]
