lib/components/fabro-llm/tests/it/wire/snapshots/it__wire__openai_responses__stream_tool_call_deltas.snap
---
source: lib/components/fabro-llm/tests/it/wire/openai_responses.rs
expression: rendered
---
[
  {
    "type": "stream_start"
  },
  {
    "type": "tool_call_start",
    "tool_call": {
      "id": "call_abc",
      "name": "search",
      "type": "function",
      "arguments": {},
      "raw_arguments": "{\"qu",
      "provider_metadata": {
        "id": "fc_123"
      }
    }
  },
  {
    "type": "tool_call_delta",
    "tool_call": {
      "id": "call_abc",
      "name": "search",
      "type": "function",
      "arguments": {},
      "raw_arguments": "{\"qu",
      "provider_metadata": {
        "id": "fc_123"
      }
    }
  },
  {
    "type": "tool_call_delta",
    "tool_call": {
      "id": "call_abc",
      "name": "search",
      "type": "function",
      "arguments": {},
      "raw_arguments": "ery\":\"foo\"}",
      "provider_metadata": {
        "id": "fc_123"
      }
    }
  },
  {
    "type": "tool_call_end",
    "tool_call": {
      "id": "call_abc",
      "name": "search",
      "type": "function",
      "arguments": {
        "query": "foo"
      },
      "raw_arguments": "{\"query\":\"foo\"}",
      "provider_metadata": {
        "id": "fc_123"
      }
    }
  },
  {
    "type": "finish",
    "finish_reason": "tool_calls",
    "usage": {
      "input_tokens": 20,
      "output_tokens": 9,
      "reasoning_tokens": 0,
      "cache_read_tokens": 0,
      "cache_write_tokens": 0
    },
    "response": {
      "id": "resp_stream",
      "model": "gpt-test",
      "provider": "openai",
      "message": {
        "role": "assistant",
        "content": [
          {
            "kind": "tool_call",
            "data": {
              "id": "call_abc",
              "name": "search",
              "type": "function",
              "arguments": {
                "query": "foo"
              },
              "raw_arguments": "{\"query\":\"foo\"}",
              "provider_metadata": {
                "id": "fc_123"
              }
            }
          }
        ]
      },
      "finish_reason": "tool_calls",
      "usage": {
        "input_tokens": 20,
        "output_tokens": 9,
        "reasoning_tokens": 0,
        "cache_read_tokens": 0,
        "cache_write_tokens": 0
      },
      "raw": {
        "id": "resp_stream",
        "model": "gpt-test",
        "status": "completed",
        "output": [],
        "usage": {
          "input_tokens": 20,
          "output_tokens": 9
        }
      },
      "warnings": [],
      "rate_limit": null
    }
  }
]
